Check unlock status in Exchange, fix some vertical layout issues, disable optimistic updates

--- a/web/app/components/Exchange/exchange.scss
+++ b/web/app/components/Exchange/exchange.scss
@@ -146,7 +146,7 @@ p.order-table-title {
 
   .orderbook-top {
     display: inline-block;
-    height: 41vh;
+    height: 40vh;
     overflow-y: auto;
     bottom: 0;
     position: relative;
@@ -154,7 +154,7 @@ p.order-table-title {
 
   .orderbook-bottom {
     display: inline-block;
-    height: 42vh;
+    height: 40vh;
     overflow-y: auto;
     top: 0;
     position: relative;
